@@ -1573,6 +1573,7 @@ tasks.register('testAcceptance', Test) {
         languageVersion = JavaLanguageVersion.of(17)
         vendor = JvmVendorSpec.ADOPTIUM
     }
+    jvmArgs(["--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED java.base/java.util=ALL-UNNAMED"])
     testClassesDirs = sourceSets.testAcceptance.output.classesDirs
     classpath = sourceSets.testAcceptance.runtimeClasspath
     systemProperties = System.properties
